--- a/css/style-1.css
+++ b/css/style-1.css
@@ -865,9 +865,9 @@ section .right_con > .txt_box .bold {
         top: 20%;
         width: 400px;
     }
-    section .right_con > .txt_box {
+    /* section .right_con > .txt_box {
         bottom: 380px;
-    }
+    } */
     section .right_con .btn_box button a {
         font-size: 15px;
     }
@@ -894,22 +894,26 @@ section .right_con > .txt_box .bold {
 }
 
 /* 12.9인치 */
-@media (max-height: 1366px) and (max-width: 1024px) {
+@media (max-width: 1024px) and (max-height: 1366px) {
     .section3 .left_con .line, .section5 .left_con .line {
         left: 14%;
         bottom: 392px;
     }
-
-    /* section .left_con > .txt_box {
-        left: 36px;
+    section .right_con > .txt_box {
         bottom: 380px;
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
-    } */
+    }
+    section .left_con > .txt_box {
+        bottom: 380px;
+    }
+}
+@media (max-width: 1366px) and (max-height: 1024px) {
+    .window {
+        max-height: 760px;
+    }
 
 }
 /* 10.9인치 */
-@media (max-width: 1080px) and (max-height: 810px) {
+@media (max-width: 1080px) and (max-height: 820px) {
     .window {
         max-height: 700px;
     }
