--- a/css/style-1.css
+++ b/css/style-1.css
@@ -908,15 +908,15 @@ section .right_con > .txt_box .bold {
 }
 @media (max-width: 1366px) and (max-height: 1024px) {
     .window {
-        max-height: 760px;
+        max-height: 700px;
     }
 
 }
 /* 10.9인치 */
 @media (max-width: 1080px) and (max-height: 820px) {
-    .window {
+    /* .window {
         max-height: 700px;
-    }
+    } */
 }
 @media (max-height: 1079px) {
     .left_con > .title_box {
