--- a/css/style-1.css
+++ b/css/style-1.css
@@ -37,14 +37,9 @@ button {
 ::selection {
     background-color: #e6e6e6;
 }
-.wrap {
-    /* scroll-snap-type: y mandatory;  */
-    /* mandatory proximity */
+/* .wrap {
     height: 100vh;
-    /* overflow-y: scroll; */
-    /* scroll-behavior: smooth; */
-    /* scrollbar-width: none; */
-}
+} */
 .wrap section {
     min-width: 1280px;
     height: 100vh;
@@ -381,6 +376,7 @@ section .right_con .btn_box button a {
     overflow: hidden;
     /* display: none; */
     user-select: none;
+    z-index: 7;
 }
 
 .window > div {
@@ -876,7 +872,7 @@ section .right_con > .txt_box .bold {
     }
 }
 
-/* 12.9인치 */
+/* 에어 5세대 기준!(1366px인 것 같다) */
 @media (max-width: 1024px) and (max-height: 1366px) {
     .section3 .left_con .line, .section5 .left_con .line {
         left: 14%;
@@ -909,9 +905,6 @@ section .right_con > .txt_box .bold {
     .object_box .ring2 {
         width: 620px;
     }
-    .left_con > .title_box > .txt_box {
-        width: 348px;
-    }
     .object_box .meteor_2 {
         top: initial;
         bottom: 1%;
@@ -928,9 +921,9 @@ section .right_con > .txt_box .bold {
         width: 414px;
     }
 }
-/* 10.9인치 */
-@media (max-width: 1080px) and (max-height: 820px) {
-    /* .window {
-        max-height: 700px;
-    } */
+
+@media (min-width: 1367px) and (min-height: 1079px) {
+    .line {
+        bottom: 72px !important;
+    }
 }
